finished lyrics and quotes

--- a/intro-questions/index.html
+++ b/intro-questions/index.html
@@ -17,7 +17,7 @@
             <li>Name one way you expect designing for screen to be different from designing for paper.</li>
                 <p>The way that you interact with scale is different since designs are confined to the size of a screen but can be enlarged in a way that physical artwork cannot be.</p>
             <li>Provide a link to a website you think exemplifies effective design. Explain your choice.</li>
-                <p>I think that <a href="https://monkeytype.com/">monkeytype</a> is really well designed website&#8212everything is easy to find and use, and it looks really pretty. There are also tons of features and ways to customize your experience.</p>
+                <p>I think that <a href="https://monkeytype.com/">monkeytype</a> is really well designed website&#8212;everything is easy to find and use, and it looks really pretty. There are also tons of features and ways to customize your experience.</p>
             <li>Provide a link to a website you think works well. Explain your choice.</li>
                 <p><a href="https://en.wikipedia.org/wiki/Hug">Wikipedia</a> is a website that works well. It is simple in its design but makes for a pleasant reading experience as it is well organized and easy to navigate.</p>
         </ol>
