--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -12,49 +12,49 @@
 
         <div>
             <p>
-                <b class="peter">Dr. Peter Venkman:</b> <q>What I’d really like to do is talk to Dana. Dana? It’s Peter.</q>
+                <strong class="peter">Dr. Peter Venkman:</strong> <q>What I’d really like to do is talk to Dana. Dana? It’s Peter.</q>
             </p>
             <p>
-                <b class="dana">Dana Barrett:</b> <q>There is no Dana, there is only Zuul.</q>
+                <strong class="dana">Dana Barrett:</strong> <q>There is no Dana, there is only Zuul.</q>
             </p>
             <p>
-                <b class="peter">Dr. Peter Venkman:</b> <q>Oh, Zuulie, you nut, now c’mon. Just relax, c’mon. I want to talk to Dana. Dana, Dana. Can I talk to Dana?</q>
+                <strong class="peter">Dr. Peter Venkman:</strong> <q>Oh, Zuulie, you nut, now c’mon. Just relax, c’mon. I want to talk to Dana. Dana, Dana. Can I talk to Dana?</q>
             </p>   
             <p>
-                <b class="dana">Dana Barrett:</b> <span class="directions">[in an inhuman demonic voice]</span> <q>There is no Dana, only Zuul!</q>
+                <strong class="dana">Dana Barrett:</strong> <span class="directions">[in an inhuman demonic voice]</span> <q>There is no Dana, only Zuul!</q>
             </p> 
             <p>
-                <b class="peter">Dr. Peter Venkman:</b> <q>What a lovely singing voice you must have.</q>
+                <strong class="peter">Dr. Peter Venkman:</strong> <q>What a lovely singing voice you must have.</q>
             </p>
         </div>
         
         <div>
             <p>
-                <b class="peter">Dr. Peter Venkman:</b> <q>This city is headed for a disaster of biblical proportions.</q>
+                <strong class="peter">Dr. Peter Venkman:</strong> <q>This city is headed for a disaster of biblical proportions.</q>
             </p>
             <p>
-                <b class="mayor">Mayor:</b> <q>What do you mean, ‘biblical?’</q>
+                <strong class="mayor">Mayor:</strong> <q>What do you mean, ‘biblical?’</q>
             </p>
             <p>
-                <b class="ray">Dr Ray Stantz:</b> <q>What he means is Old Testament, Mr. Mayor, real wrath of God type stuff.</q>
+                <strong class="ray">Dr Ray Stantz:</strong> <q>What he means is Old Testament, Mr. Mayor, real wrath of God type stuff.</q>
             </p>
             <p>
-                <b class="peter">Dr. Peter Venkman:</b> <q>Exactly.</q>
+                <strong class="peter">Dr. Peter Venkman:</strong> <q>Exactly.</q>
             </p>
             <p>
-                <b class="ray">Dr Ray Stantz:</b> <q>Fire and brimstone coming down from the skies! Rivers and seas boiling!</q>
+                <strong class="ray">Dr Ray Stantz:</strong> <q>Fire and brimstone coming down from the skies! Rivers and seas boiling!</q>
             </p>
             <p>
-                <b class="egon">Dr. Egon Spengler:</b> <q>Forty years of darkness! Earthquakes, volcanoes...</q>
+                <strong class="egon">Dr. Egon Spengler:</strong> <q>Forty years of darkness! Earthquakes, volcanoes...</q>
             </p>
             <p>
-                <b class="winston">Winston Zeddemore:</b> <q>The dead rising from the grave!</q>
+                <strong class="winston">Winston Zeddemore:</strong> <q>The dead rising from the grave!</q>
             </p>
             <p>
-                <b class="peter">Dr. Peter Venkman:</b> <q>Human sacrifice, dogs and cats living together... mass hysteria!</q>
+                <strong class="peter">Dr. Peter Venkman:</strong> <q>Human sacrifice, dogs and cats living together... mass hysteria!</q>
             </p>
             <p>
-                <b class="mayor">Mayor:</b> <q>All right, all right! I get the point!</q>
+                <strong class="mayor">Mayor:</strong> <q>All right, all right! I get the point!</q>
             </p>
         </div>
 
@@ -63,16 +63,16 @@
                 [clearing away tables in the dining room to make room for the ghost trap]
             </p>
             <p>
-                <b class="ray">Dr Ray Stantz:</b> <q>I’ve gotta get this in the clear...!</q>
+                <strong class="ray">Dr Ray Stantz:</strong> <q>I’ve gotta get this in the clear...!</q>
             </p>
             <p>
-                <b class="ray">Dr Ray Stantz:</b> <q>Wait, wait, wait! I’ve always wanted to do this...</q>
+                <strong class="ray">Dr Ray Stantz:</strong> <q>Wait, wait, wait! I’ve always wanted to do this...</q>
             </p>
             <p class="directions">
                 [He yanks a tablecloth off of a table, overturning and shattering everything except the centerpiece in the middle]
             </p>
             <p>
-                <b class="peter">Dr. Peter Venkman:</b> <span class="directions">[triumphantly]</span> <q>And the flowers are still standing!</q>
+                <strong class="peter">Dr. Peter Venkman:</strong> <span class="directions">[triumphantly]</span> <q>And the flowers are still standing!</q>
             </p>
         </div>
         <script src="script.js"></script>
