--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 
     </head>
     <body>
-
-        <a href="hello/index.html"></a>
-        <a href="movie-quotes/index.html"></a>
-        <a href="lyrics-exercise/index.html"></a>
-        <a href="intro-questions/index.html"></a>
-
+        <a href="hello/index.html">hello</a>
+        <a href="movie-quotes/index.html">quotes</a>
+        <a href="lyrics-exercise/index.html">lyrics</a>
+        <a href="intro-questions/index.html">intro-questions</a>
     </body>
-</html>
+</html> 
