--- a/lyrics-exercise/index.html
+++ b/lyrics-exercise/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title><Lyric Sheet></title>
+        <title>Lyric Sheet</title>
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body id="body">
