--- a/movie-quotes/index.html
+++ b/movie-quotes/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title><Movie Quotes></title>
+        <title>Movie Quotes</title>
         <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body id="body">
