--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <a href="intro-questions/index.html">intro-questions</a>
         <a href="movie-quotes/index.html">quotes</a>
         <a href="lyrics-exercise/index.html">lyrics</a>
+        <a href="type-styles/index.html">type styles</a>
     </body>
 </html> 
