--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <a href="movie-quotes/index.html">quotes</a>
         <a href="lyrics-exercise/index.html">lyrics</a>
         <a href="type-styles/index.html">type styles</a>
+        <a href="recipe/research/index.html/">Recipe page - research</a>
     </body>
 </html> 
