--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <a href="movie-quotes/index.html">quotes</a>
         <a href="lyrics-exercise/index.html">lyrics</a>
         <a href="type-styles/index.html">type styles</a>
-        <a href="recipe/research/index.html/">Recipe page - research</a>
+        <a href="complex-selectors-challenge/index.html">complex-selectors</a>
+        <a href="exercises/using-images/index.html">using imgs</a>
+        Recipe page - <a href="recipe/research/index.html/">research</a>, <a href="recipe/lowfi-prototypes/index.html">lowfi</a>, <a href="recipe/content/index.html">content</a>
     </body>
 </html> 
