--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <a href="type-styles/index.html">type styles</a>
         <a href="complex-selectors-challenge/index.html">complex-selectors</a>
         <a href="exercises/using-images/index.html">using imgs</a>
-        Recipe page - <a href="recipe/research/index.html/">research</a>, <a href="recipe/lowfi-prototypes/index.html">lowfi</a>, <a href="recipe/content/index.html">content</a>
+        <a href="exercises/box-model/index.html">box model</a>
+        <a href="exercises/floats/index.html">floats</a>
+        <a href="exercises/grids/index.html">grids</a>
+        Recipe page - <a href="recipe/research/index.html/">research</a>, <a href="recipe/lowfi-prototypes/index.html">lowfi</a>, <a href="recipe/content/index.html">content</a>, <a href="recipe/hifi-prototypes/index.html">hifi</a>
     </body>
 </html> 
