Finished hi-fi prototypes

--- a/recipe/hifi-prototypes/index.html
+++ b/recipe/hifi-prototypes/index.html
@@ -6,19 +6,39 @@
     </head>
     <body id="body">
         <h1>
-            Low-fi Prototypes
+            Hi-fi Prototypes
         </h1>
-        <figure>
-            <img src="prototype1.jpeg" alt="Low-fi prototype 1">
-            <figcaption>prototype 1<br>left: desktop; right: mobile</figcaption>
-        </figure>
-        <figure>
-            <img src="prototype2.jpeg" alt="Low-fi prototype 2">
-            <figcaption>prototype 2<br>left: desktop; right: mobile</figcaption>
-        </figure>
-        <figure>
-            <img src="prototype3.jpeg" alt="Low-fi prototype 3">
-            <figcaption>prototype 3<br>left: desktop; right: mobile</figcaption>
-        </figure>
+        <h5>
+            * static background = sticky element
+        </h5>
+        <div>
+            <figure class="small">
+                <img src="images/1_prototype.jpg" alt="Hi-fi prototype 1">
+                <figcaption>prototype 1<br>desktop</figcaption>
+            </figure>
+            <figure class="small">
+                <img src="images/1_mobile_prototype.jpg" alt="Hi-fi prototype 1 mobile">
+                <figcaption>prototype 1<br>mobile</figcaption>
+            </figure>
+        </div>
+        <div>
+            <figure class="small">
+                <img src="images/2_prototype.jpg" alt="Hi-fi prototype 1">
+                <figcaption>prototype 1<br>desktop</figcaption>
+            </figure>
+            <figure class="small">
+                <img src="images/2_mobile_prototype.jpg" alt="Hi-fi prototype 1 mobile">
+                <figcaption>prototype 2<br>mobile</figcaption>
+            </figure>
+        </div>
+        <div>
+            <img src="images/1_full_screen_prototype_1.jpg" alt="Hi-fi prototype 2 desktop">
+            <img src="images/1_full_screen_prototype_2.jpg" alt="Hi-fi prototype 2 desktop">
+            <img src="images/1_full_screen_prototype_3.jpg" alt="Hi-fi prototype 2 desktop">
+        </div>
+        <div>
+            <img src="images/2_full_screen_prototype_1.jpg" alt="Hi-fi prototype 2 desktop">
+            <img src="images/2_full_screen_prototype_2.jpg" alt="Hi-fi prototype 2 desktop">
+        </div>
     </body>
 </html>
