--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="exercises/box-model/index.html">box model</a>
         <a href="exercises/floats/index.html">floats</a>
         <a href="exercises/grids/index.html">grids</a>
+        <a href="multi-panel-page/index.html">multi-panel-page</a>
         <a href="exercises/responsive-design-intro/index.html">Responsive design introduction</a>
         <a href="exercises/responsive-design-techniques/index.html">Responsive design techniques</a>
         Recipe page - <a href="recipe/research/index.html/">research</a>, <a href="recipe/lowfi-prototypes/index.html">lowfi</a>, <a href="recipe/content/index.html">content</a>, <a href="recipe/hifi-prototypes/index.html">hifi</a>
