finshed responsive design excercises

--- a/exercises/responsive-design-intro/index.html
+++ b/exercises/responsive-design-intro/index.html
@@ -6,6 +6,7 @@
   <title>Responsive Design Introduction</title>
   <link rel="stylesheet" href="https://wudesign.me/resources/basic-layout/css/responsive-design-intro.css">
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
