finished recipe page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <a href="multi-panel-page/index.html">multi-panel-page</a>
         <a href="exercises/responsive-design-intro/index.html">Responsive design introduction</a>
         <a href="exercises/responsive-design-techniques/index.html">Responsive design techniques</a>
-        Recipe page - <a href="recipe/research/index.html/">research</a>, <a href="recipe/lowfi-prototypes/index.html">lowfi</a>, <a href="recipe/content/index.html">content</a>, <a href="recipe/hifi-prototypes/index.html">hifi</a>
+        Recipe page - <a href="recipe/complete/index.html">final</a>, <a href="recipe/research/index.html/">research</a>, <a href="recipe/lowfi-prototypes/index.html">lowfi</a>, <a href="recipe/content/index.html">content</a>, <a href="recipe/hifi-prototypes/index.html">hifi</a>
     </body>
 </html> 
