--- a/recipe/hifi-prototypes/index.html
+++ b/recipe/hifi-prototypes/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Low-fi Prototypes</title>
+        <title>Hi-fi Prototypes</title>
         <link href="styles.css" type="text/css" rel="stylesheet">
     </head>
     <body id="body">
