fixing up responsive design

--- a/recipe/complete/index.html
+++ b/recipe/complete/index.html
@@ -15,13 +15,24 @@
                 	</p>
                 </section>
                 <img src="APPLE_CRISP_WITH_ICE_CREAM.jpeg" alt="apple crisp with ice cream">
+
+                <div class = "white info">
+                    <h3>6 – 8 servings</h3>
+                    <h3>|</h3>
+                    <h3>Prep: 15 min</h3>
+                </div>
+                <div class = "white info">
+                    <h3>Bake: 40 – 45 min</h3>
+                    <h3>|</h3>
+                    <h3>Total: 1 hr</h3>
+                </div>
             </div>
             
-            <section class="white" id="info">
+            <section class="white info">
                 <h3>6 – 8 servings</h3>
                 <h3>|</h3>
                 <h3>Prep: 15 min</h3>
-                <h3 id="center">|</h3>
+                <h3 class="line">|</h3>
                 <h3>Bake: 40 – 45 min</h3>
                 <h3>|</h3>
                 <h3>Total: 1 hr</h3>
@@ -103,4 +114,6 @@
                 </section>
             </div>
         </div>
+        <script src="script.js"></script>
     </body>
+</html>
