--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
         <a href="exercises/responsive-design-intro/index.html">Responsive design introduction</a>
         <a href="exercises/responsive-design-techniques/index.html">Responsive design techniques</a>
         Recipe page - <a href="recipe/complete/index.html">final</a>, <a href="recipe/research/index.html/">research</a>, <a href="recipe/lowfi-prototypes/index.html">lowfi</a>, <a href="recipe/content/index.html">content</a>, <a href="recipe/hifi-prototypes/index.html">hifi</a>
+        <a href="buttons/index.html">buttons</a>
+        microsite - <a href="microsite/creative-brief/">creative-brief</a>, <a href="microsite/outline/">outline</a>
     </body>
 </html> 
