--- a/buttons/index.html
+++ b/buttons/index.html
@@ -10,9 +10,11 @@
 
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css'>
+        <link href="//cdn.shopify.com/s/files/1/0156/0327/t/11/assets/body-font.css?v=4504165366937903183" rel="stylesheet" type="text/css" media="all" />
 		<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-		<link href='styles.css' rel='stylesheet' type='text/css'>
+		<script src="https://kit.fontawesome.com/7c5d2ee3dd.js" crossorigin="anonymous"></script>
+        <link href='styles.css' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		
