--- a/microsite/mockups-b/index.html
+++ b/microsite/mockups-b/index.html
@@ -2,33 +2,24 @@
 <html>
     <head>
         <title>Mockup B</title>
-        <link href="styles.css" type="text/css" rel="stylesheet">
+        <link href="../styles.css" type="text/css" rel="stylesheet">
     </head>
     <body id="body">
         <h1>
             Mockup B
         </h1>
-        <h5>
-            * static background = sticky element
-        </h5>
         <div>
-            <figure class="small">
-                <img src="images/1_prototype.jpg" alt="desktop prototype 1">
+            <figure class="desk">
+                <img src="images/mockup_a_desktop.jpg" alt="desktop prototype 1">
+                <img src="images/mockup_a_desktop2.jpg" alt="desktop prototype 1">
+                <img src="images/mockup_a_desktop3.jpg" alt="desktop prototype 1">
                 <figcaption>desktop</figcaption>
             </figure>
-            <figure class="small">
-                <img src="images/1_mobile_prototype.jpg" alt="prototype 1 mobile">
+            <figure class="mob">
+                <img src="images/mockup_a_mobile.jpg" alt="prototype 1 mobile">
+                <img src="images/mockup_a_mobile2.jpg" alt="prototype 1 mobile">
                 <figcaption>mobile</figcaption>
             </figure>
-        </div>
-        <div>
-            <img src="images/1_full_screen_prototype_1.jpg" alt="desktop prototype 2 desktop">
-            <img src="images/1_full_screen_prototype_2.jpg" alt="desktop prototype 2 desktop">
-            <img src="images/1_full_screen_prototype_3.jpg" alt="desktop prototype 2 desktop">
-        </div>
-        <div>
-            <img src="images/2_full_screen_prototype_1.jpg" alt="desktop prototype 2 desktop">
-            <img src="images/2_full_screen_prototype_2.jpg" alt="desktop prototype 2 desktop">
         </div>
     </body>
 </html>
