--- a/microsite/final/index.html
+++ b/microsite/final/index.html
@@ -9,19 +9,27 @@
         <div id="background">
             
         </div>
-        <div id="navigation">
-            <h2>
-                Early Life
-            </h2>
-            <h4>
-                <a href="late_life/index.html">Late Life</a>
-            </h4>
-            <h4>
-                <a href="works/index.html">Works</a>
-            </h4>
-            <h4>
-                <a href="awards/index.html">Awards</a>
-            </h4>
+        <div class="marginalia" id="navigation">
+            <a href="#" class="current">
+                <h4>
+                    Early Life
+                </h4>
+            </a>
+            <a href="late_life/index.html">
+                <h4>
+                    Later Life
+                </h4>
+            </a>
+            <a href="works/index.html">
+                <h4>
+                    Works
+                </h4>
+            </a>
+            <a href="awards/index.html">
+                <h4>
+                    Awards
+                </h4>
+            </a>
         </div>
 
         <div id = "content">
@@ -46,6 +54,11 @@
             <div id = "main">
                 <section id="parents" class="subsection left">
                     <div>
+                        <div class = "sideMatter">
+                            <h3>
+                                &ldquo;We cannot love or think except in fragments of time each of which goes along its own trajectory and immediately disappears.&rdquo;
+                            </h3>
+                        </div>
                         <h4>
                             Parents
                         </h4>
@@ -59,7 +72,7 @@
                 </section>
                 <section class="subsection right" id="Early-life">
                     <div>
-                        <img src="images/san-remo.jpeg" alt = "San Remo">
+                        <img class = "sideMatter" src="images/san-remo.jpeg" alt = "San Remo">
                         <h4>
                             Early life and education
                         </h4>
@@ -80,6 +93,18 @@
             </div>
             <br>
 
+        </div>
+        <div class="marginalia" id="footer">
+            <a href="https://en.wikipedia.org/wiki/Italo_Calvino#Awards" target="_blank">
+                <h4>
+                    Credit: Wikipedia
+                </h4>
+            </a>
+            <a href="https://karinapuente.com/" target="_blank">
+                <h4>
+                    Image credits: Karina Puente
+                </h4>
+            </a>
         </div>
         <script src="script.js"></script>
     </body>
