--- a/microsite/fully-realized/awards/index.html
+++ b/microsite/fully-realized/awards/index.html
@@ -7,9 +7,9 @@
         <link href="styles.css" type="text/css" rel="stylesheet">
     </head>
     <body id="body">
-        <section id="background">
+        <div id="background">
             
-        </section>
+        </div>
         <div id="navigation">
             <h4>
                 <a href="../index.html">Early Life</a>
@@ -25,9 +25,9 @@
             </h2>
         </div>
 
-        <section id = content>
-            <section id = "main">
-                <section id="" class="subsection left">
+        <div id = content>
+            <div id = "main">
+                <div class="subsection left">
                     <ul>
                         <li>
                             1946 – L'Unità Prize (shared with Marcello Venturi) for the short story, Minefield (Campo di mine)
@@ -66,8 +66,9 @@
                             1982 – World Fantasy Award – Life Achievement
                         </li>
                     </ul>
-                </section>
-            </section>
+                </div>
+            </div>
             <br>
-        </section>
+        </div>
+        <script src="../script.js"></script>
     </body>
