--- a/microsite/final/late_life/index.html
+++ b/microsite/final/late_life/index.html
@@ -10,25 +10,33 @@
         <div id="background">
             
         </div>
-        <div id="navigation">
-            <h4>
-                <a href="../index.html">Early Life</a>
-            </h4>
-            <h2>
-                Later Life
-            </h2>
-            <h4>
-                <a href="../works/index.html">Works</a>
-            </h4>
-            <h4>
-                <a href="../awards/index.html">Awards</a>
-            </h4>
+        <div class="marginalia" id="navigation">
+            <a href="../index.html">
+                <h4>
+                    Early Life
+                </h4>
+            </a>
+            <a href="#" class="current">
+                <h4>
+                    Later Life
+                </h4>
+            </a>
+            <a href="../works/index.html">
+                <h4>
+                    Works
+                </h4>
+            </a>
+            <a href="../awards/index.html">
+                <h4>
+                    Awards
+                </h4>
+            </a>
         </div>
         <div id = content>
             <div id = "main">
                 <div class="subsection left">
                     <div>
-                        <img src="../images/italo-calvino.jpeg" alt="portrait of Italo Calvino">
+                        <img class = "sideMatter" src="../images/italo-calvino.jpeg" alt="portrait of Italo Calvino">
                         <p>
                             Vittorini's death in 1966 greatly affected Calvino. He went through what he called an "intellectual depression", which the writer himself described as an important passage in his life: "...I ceased to be young. Perhaps it's a metabolic process, something that comes with age, I'd been young for a long time, perhaps too long, suddenly I felt that I had to begin my old age, yes, old age, perhaps with the hope of prolonging it by beginning it early."
                         </p>
@@ -48,6 +56,18 @@
                 </div>
             </div>
             <br>
+        </div>
+        <div class="marginalia" id="footer">
+            <a href="https://en.wikipedia.org/wiki/Italo_Calvino#Later_life_and_work" target="_blank">
+                <h4>
+                    Credit: Wikipedia
+                </h4>
+            </a>
+            <a href="https://karinapuente.com/" target="_blank">
+                <h4>
+                    Image credits: Karina Puente
+                </h4>
+            </a>
         </div>
         <script src="../script.js"></script>
     </body>
