fixed mobile layout

--- a/microsite/final/awards/index.html
+++ b/microsite/final/awards/index.html
@@ -86,7 +86,7 @@
             <br>
         </div>
         <div class="marginalia" id="footer">
-            <a href="https://en.wikipedia.org/wiki/Italo_Calvino" target="_blank">
+            <a href="https://en.wikipedia.org/wiki/Italo_Calvino#Awards" target="_blank">
                 <h4>
                     Credit: Wikipedia
                 </h4>
