--- a/microsite/final/index.html
+++ b/microsite/final/index.html
@@ -95,7 +95,7 @@
 
         </div>
         <div class="marginalia" id="footer">
-            <a href="https://en.wikipedia.org/wiki/Italo_Calvino#Awards" target="_blank">
+            <a href="https://en.wikipedia.org/wiki/Italo_Calvino" target="_blank">
                 <h4>
                     Credit: Wikipedia
                 </h4>
